write first draft of why, add footer, formatting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,16 @@
 <body>
   <div class="container">
     {{ content }}
-    
+    <footer>
+    	<p class="copyright">
+    		Copyright &copy; 2016 
+    		<a href="https://github.com/tjnz">Tom Johns</a>
+    		. Powered by 
+    		<a href="http://jekyllrb.com">Jekyll</a>
+    		, theme by
+    		<a href="https://github.com/gfjaru/Kiko">Kiko</a>
+    	</p>
+    </footer>
   </div>
 </body>
 </html>
