--- a/style.scss
+++ b/style.scss
@@ -386,6 +386,10 @@ tbody tr:nth-child(odd) th {
   }
 }
 
+.blue {
+  color: #268bd2;
+}
+
 .highlight .hll { background-color: #ffffcc }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
